# nro-bot.github.io

./: .gitignore  Makefile  README.md  manage.py  pelicanconf.py  publishconf.py  pyproject.toml
.github/workflows/: pelican.yml
content/: 18-Servo-Hexapod.md  6-01x-Robots.md  Awards.md  COVID-Activism.md  Countertop-Vending-Machine.md  Credit-Communities.md  DIY-Menstrual-Cup.md  Digger-Finger-Press.md  Digger-Finger.md  EECS-Robot-Kit.md  EL-Wire-Workshop.md  Feminism-Hackathon-Hack4Fem.md  Food-Fun.md  Hexapod-Conference-Hexacon.md  Inertia-Wheel-Pendulum.md  LED-Graduation-Cap.md  Laser-Pancakes.md  MITERS-Seminar-Series.md  Massage-Parlor-Classifier.md  NarwhalEdu-Kickstarter.md  Nyancake.md  Ocean-Buoy-Planning.md  POV-yoyo.md  PaperSignals.md  Path-Planning-Algorithms.md  Personal-Websites.md  PhD-Thesis.md  Portfolio-Website.md  Projects-I-didn-t-get-around-to-documenting.md  Rideable-Hexapod.md  RoCo-Website-Redesign.md  Robot-Arm-Assistant.md  Sailboat-Repairs.md  Sailboat-Rudder.md  Sailing-and-Other-Adventures.md  Sewing-and-Crafts.md  Six-Axis-Force-Torque-Sensor.md  Staubli-Robot-Arm-Drawing.md  Strobe-Lab-Schlieren-Technique.md  Swarmbuddies.md  (+6 more)
content/pages/: about.md
theme/static/css/: style.css
theme/templates/: article.html  base.html  category.html  index.html  page.html
